# GhostMe

./: .env.production  .env.staging  .gitignore  .prettierignore  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml  pr.yml
cipher/: Cargo.toml
cipher-wasm/: .gitignore  cipher.d.ts  cipher.js  cipher_bg.wasm  cipher_bg.wasm.d.ts  package.json
cipher/src/: lib.rs
public/: _redirects
src/: App.tsx  AppRoutes.tsx  OneLiner.css  OneLiner.module.css  OneLiner.tsx  SettingsPage.tsx  extra.d.ts  globals.d.ts  index.css  init.ts  main.tsx  variables.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: ApiMessagesDisplay.tsx  ContactCard.tsx  CryptoDebugger.tsx  DateSeparator.tsx  EditNicknamePopover.tsx  ErrorCard.tsx  FeeBuckets.tsx  FetchApiMessages.css  FetchApiMessages.tsx  HandshakeManager.css  HandshakeManager.tsx  HandshakeResponse.tsx  KaspaAddress.tsx  KaswareNotInstalled.tsx  MenuHamburger.tsx  MessageDisplay.tsx  MessagesList.tsx  MnemonicEntry.tsx  NetworkSelector.tsx  NewChatForm.module.css  NewChatForm.tsx  PriorityFeeSelector.tsx  ProfileSettings.tsx  QrScanner.tsx  SendPaymentPopup.tsx  WalletAddressSection.tsx  WalletInfo.tsx
src/config/: constants.ts  nodes.ts  password.ts  protocol.ts
src/containers/: ContactSection.tsx  MessagesSection.tsx  Messaging-ghost.code-workspace  MessengerContainer.tsx  ModalDisplay.tsx  NewChatForm.tsx  (+9 more)
(+69 files in other folders)
