[package]
name = "cipher"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
kaspa-addresses = {branch = "master", git = "https://github.com/kaspanet/rusty-kaspa.git"}
hkdf = "0.12.4"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
k256 = {version = "0.13.4", features = ["ecdh", "arithmetic"]}
sha2 = "0.10.8"
secp256k1 = "0.29.1"
wasm-bindgen = "0.2.100"
kaspa-wallet-keys = {branch = "master", git = "https://github.com/kaspanet/rusty-kaspa.git"}
uuid = {version = "1.16.0", features = ["v4", "fast-rng", "js"]}

[dev-dependencies]
kaspa-wrpc-client = {branch = "master", git = "https://github.com/kaspanet/rusty-kaspa.git"}
